<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SuperWindow</string>
    <string name="introduction">App Introduction</string>
    <string name="introduction_detail">1. Provides an enhanced multi-screen experience for large-screen devices\n2. Requires Android 14 or higher and Shizuku authorization\n3. This APP is experimental, usability may vary depending on the device.</string>

    <string name="home">Home</string>
    <string name="settings">Settings</string>

    <string name="local_use_not_supported">The current Android version does not support using SuperWindow on this device</string>
    <string name="no_browser">No default browser</string>
    <string name="already_open">Already open</string>

    <string name="Shizuku_explanation">Authorize Shizuku to use Super Window on this device</string>
    <string name="Shizuku_connected">Shizuku connected</string>
    <string name="Shizuku_need_update">Shizuku version is outdated, please update</string>
    <string name="Shizuku_setup_instruction">Shizuku is not running, click to view Shizuku setup instructions</string>
    <string name="Shizuku_authorization_instruction">Once Shizuku permissions are granted, the app will have elevated privileges beyond regular apps, please be mindful of your device\'s security, click to grant Shizuku permission to this app</string>

    <string name="local_app_launcher">Local App Launcher</string>
    <string name="expand_mode_hint">Please rotate the device to landscape to enable expanded view</string>

    <string name="appearance">Appearance</string>
    <string name="dark_theme">Dark theme</string>
    <string name="follow_system">Follow system</string>
    <string name="always_off">Always off</string>
    <string name="always_on">Always on</string>
    <string name="system_color">Use system theme color</string>
    <string name="full_screen">Full screen</string>
    <string name="full_screen_summary">Full screen in expanded view</string>
    <string name="top_bottom_padding">Top and bottom padding</string>
    <string name="top_bottom_padding_summary">Set the top and bottom padding of the expanded view</string>
    <string name="others">Others</string>
    <string name="enable_log">Enable log output</string>
    <string name="log_viewer">Log Viewer</string>
    <string name="export_log">Export log</string>
    <string name="exporting_log">Exporting log, please wait…</string>
    <string name="export_log_success">Log export successful</string>
    <string name="export_log_fail">Failed to export log</string>
    <string name="license">License</string>

    <string name="replace_app">Replace App</string>
    <string name="minimize">Minimize</string>
    <string name="close_app">Close App</string>
    <string name="replace_by_drag">Release to replace</string>

    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>

    <string name="icon">Icon</string>

    <string name="clear">Clear</string>
    <string-array name="log_viewer_spinner">
        <item>Verbose</item>
        <item>Debug</item>
        <item>Info</item>
        <item>Warning</item>
        <item>Error</item>
        <item>Assert</item>
    </string-array>

    <array name="side_bar_letters">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
        <item>H</item>
        <item>I</item>
        <item>J</item>
        <item>K</item>
        <item>L</item>
        <item>M</item>
        <item>N</item>
        <item>O</item>
        <item>P</item>
        <item>Q</item>
        <item>R</item>
        <item>S</item>
        <item>T</item>
        <item>U</item>
        <item>V</item>
        <item>W</item>
        <item>X</item>
        <item>Y</item>
        <item>Z</item>
        <item>#</item>
    </array>
</resources>